--- a/shop/package.json
+++ b/shop/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "axios": "^1.7.9",
     "lodash.debounce": "^4.0.8",
     "next": "15.1.6",
     "react": "^19.0.0",
